# ai-hedge-fund

./: .gitignore  ADAPTIVE_SYSTEM_GUIDE.md  DEPENDENCY_FIX.md  OPERATIONS_GUIDE.md  PHASE2_AB_TESTING_GUIDE.md  README.md  SETUP_GUIDE.md  TRAINING_GUIDE.md  pyproject.toml  test_adaptive_system.py
.claude/: settings.local.json
config/: llm_config.yaml  ml_config.yaml  portfolio_config.yaml
data/: sample_training_data.json  test_structure.json  training_backtest.json  training_backtest_2.json  training_backtest_2024-01-01_2024-12-31.json  training_backtest_2024-11-01_2024-11-30.json  training_backtest_2024-11-05_2024-12-31.json  training_backtest_2024-11-05_2025-08-26.json  training_backtest_2024-11-15_2024-11-30.json  training_backtest_2024-12-01_2024-12-15.json
data/market_cache/: SPY_2022-04-25_2023-01-02.json  SPY_2022-04-26_2023-01-03.json  SPY_2022-04-27_2023-01-04.json  SPY_2022-04-28_2023-01-05.json  SPY_2022-04-29_2023-01-06.json  SPY_2022-05-01_2023-01-08.json  SPY_2022-05-02_2023-01-09.json  SPY_2022-05-03_2023-01-10.json  SPY_2022-05-04_2023-01-11.json  SPY_2022-05-05_2023-01-12.json  SPY_2022-05-06_2023-01-13.json  SPY_2022-05-07_2023-01-14.json  SPY_2022-05-10_2023-01-17.json  SPY_2022-05-11_2023-01-18.json  SPY_2022-05-12_2023-01-19.json  SPY_2022-05-13_2023-01-20.json  SPY_2022-05-15_2023-01-22.json  SPY_2022-05-16_2023-01-23.json  SPY_2022-05-17_2023-01-24.json  SPY_2022-05-18_2023-01-25.json  SPY_2022-05-19_2023-01-26.json  SPY_2022-05-20_2023-01-27.json  SPY_2022-05-22_2023-01-29.json  SPY_2022-05-23_2023-01-30.json  SPY_2022-05-24_2023-01-31.json  SPY_2022-05-25_2023-02-01.json  SPY_2022-05-26_2023-02-02.json  (+357 more)
docker/: run.bat
examples/: adaptive_system_demo.py
scripts/: compare_ab_results.py  debug_model_dump.py  init_cache.py  test_regime_detection.py  test_regime_variation.py  train_signal_ensemble.py  verify_fix.py
src/: backtester.py  main.py
tests/: test_api_rate_limiting.py
(+11 files in other folders)
